deploy/k8s/base/deviations-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deviations
  labels:
    app.kubernetes.io/name: deviations
spec:
  selector:
    app.kubernetes.io/name: deviations
  ports:
    - name: http
      port: 8084
      targetPort: http
