deploy/k8s/base/schedule-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: schedule
  labels:
    app.kubernetes.io/name: schedule
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: schedule
  ports:
    - name: http
      port: 8082
      targetPort: http
